--- a/css/styles_faq.css
+++ b/css/styles_faq.css
@@ -1,65 +1,4 @@
-* {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
-    font-family: "Calibre", sans-serif;
-    font-size: 24px;
-}
-/*
-@media screen and (min-width: 640px) {
-
-}
-
-@media screen and (min-width: 768px) {
-
-}
-
-@media screen and (min-width: 1024px) {
-
-}
-
-@media screen and (min-width: 1280px) {
-
-}*/
-
-body {
-    background-color: #EFEFF1;
-}
-
-:root {
-    --dark-blue: #799dab;
-    --normal-blue: #c7eaf8;
-    --light-blue: #dcf1f9;
-
-    --light-background: #EFEFF1;
-    --dark-background: #1C1C1C;
-}
-
-h1 {
-    color: var(--dark-blue);
-    font-size: 24px;
-}
-
-h2 {
-    color: var(--dark-blue);
-    font-size: 32px;
-}
-
-a {
-    color: var(--dark-blue);
-}
-
-a:visited {
-    color: var(--dark-blue);
-}
-
-.faq-page-breakline {
-    height: 2rem;
-}
-
-.faq-outer-flex { /*Flexbox used for configuring the main FAQ page*/
+.faq_outer_flex { /*Flexbox used for configuring the main FAQ page*/
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -67,38 +6,43 @@ a:visited {
     justify-content: space-between;
 }
 
-.faq-inner-flex { /*Flexbox used for configuring the dropdown popup boxes*/
+.faq_inner_flex { /*Flexbox used for configuring the dropdown popup boxes*/
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
     gap: 1.25rem;
+    width: 60vw;
 }
 
-.faq-leesmeer { /*Flexbox used for aligning the "Lees Meer" button*/
+.faq_leesmeer { /*Flexbox used for aligning the "Lees Meer" button*/
     display: flex;
-    width: 32rem;
+    width: 60vw;
     justify-content: flex-end;
     font-size: large;
     margin-bottom: 1rem;
+    color: var(--dark-blue);
 }
 
-.faq-popup-box-flex { /*Flexbox used for the dropdown popup boxes*/
+.faq_leesmeer:visited {
+    color: var(--dark-blue);
+}
+
+.faq_popup_box_flex { /*Flexbox used for the dropdown popup boxes*/
     display: flex;
-    width: 32rem;
-    height: 3.6rem;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
-    padding-left: 1.25rem;
     background-color: #FFFFFF;
     stroke: #D3D3D3;
     stroke-width: 1px;
     box-shadow: 0 1.5px 9px 0 rgba(0, 0, 0, 0.2);
     border-radius: 8px;
+    flex-direction: column;
 }
 
-.faq-popup-box-collapsible { /*Box used for the dropdown popup boxes arrows*/
+.faq_popup_box_collapsible { /*Box used for the dropdown popup boxes arrows*/
     border: 0px;
     height: 3.6rem;
     width: 3.6rem;
@@ -108,6 +52,44 @@ a:visited {
     cursor: pointer;
 }
 
-.faq-popup-box-collapsible-content { /*Box used for the dropdown popup boxes dropdowns*/
-    overflow: hidden;
+.faq_text { /*Box used for the dropped down popup boxes*/
+    width: 100%;
+    padding-left: 1.25rem;
+    background-color: #FFFFFF;
+    stroke: #D3D3D3;
+    stroke-width: 1px;
+    border-radius: 8px;
+    padding-bottom: 1.2rem;
+    padding-right: 1.25rem;
+    display: none;
+}
+
+.faq_text hr { /*Defines the size and colour of the line seperating the popup boxes with the dropped down popup boxes*/
+    border: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.faq_text p { /*Defines the padding of the text used inside of the dopped down popup boxes*/
+    padding-top: .5rem;
+}
+
+.faq_row { /*Defines the padding of the text used inside of the popup boxes*/
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 1.25rem;
+    cursor: pointer;
+}
+
+.faq_page_breakline { /*Breakline used for making small space between title and popup boxes*/
+    height: 2rem;
+}
+
+.faq_container { /*Small margin for faq-page.php*/
+    margin-top: 6rem;
+    margin-bottom: 6rem;
+}
+
+.toggle_image {
+    transform: rotate(0deg);
 }
