--- a/css/header.css
+++ b/css/header.css
@@ -6,7 +6,9 @@ header {
 }
 
 #headerimg {
-    width: 20rem;
+    object-fit: fill;
+    max-width:100%;
+    max-height:100%;
 }
 
 #headerbackground {
@@ -14,27 +16,35 @@ header {
     position: absolute;
 }
 
-#banner {
+#banner_items {
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
+    width: 100%;
     height: 100vh;
 }
 
-#banner_text h1 {
-    font-family: Calibre-Bold;
-    font-size: 46px;
-    color: var(--dark-blue);
-}
-#banner_text h2 {
-    font-family: Calibre-Medium;
-    font-size: 48px;
-    color: var(--dark-blue);
+.banner_image {
+    width: 40%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#banner_text h3 {
+.banner_text {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.banner_text h1 {
+    color: #799DAB;
+    font-size: 64px;
+}
+
+.banner_text h3 {
+    color: var(--text-color);
     font-family: Calibre-Regular;
-    font-size: 18px;
-    color: var(--black);
+    font-weight: 300;
+    font-size: 24px;
 }
