fixed the buttons on the services component. added circle-workspace to the styles.css, TODO: readd the icons for the circle-workspace section

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
 @import url(footer.css);
 @import url(line.css);
 @import url(circle_dots.css);
+@import url(circle_workspace.css);
 @import url(darkmodebutton.css);
 
 @font-face {
