--- a/css/services.css
+++ b/css/services.css
@@ -127,8 +127,13 @@
     font-family: Calibre-Bold,sans-serif;
     font-size: 1.013rem;
     color: #EFF0F6;
-    text-align: center;
     margin: 1rem 0;
+}
+
+.circle_button a {
+    color: white;
+    width: 100%;
+    height: 100%;
 }
 
 /* Container for the service D.O.T.S.*/
