--- a/css/styles_faq.css
+++ b/css/styles_faq.css
@@ -29,6 +29,10 @@
     color: var(--dark-blue);
 }
 
+.faq_leesmeer a {
+    color: var(--dark-blue);
+}
+
 .faq_popup_box_flex { /*Flexbox used for the dropdown popup boxes*/
     display: flex;
     width: 100%;
