--- a/css/styles.css
+++ b/css/styles.css
@@ -94,3 +94,25 @@ h3 {
     font-family: Calibre-Regular, sans-serif;
 }
 
+@media screen and (max-width: 640px){
+
+    .container {
+        padding: 0 10rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        padding: 0 5rem;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .container {
+        padding: 0 2rem;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+
+}
