FAQ & FAQ-page: FAQ boxes are now included with the contaienr class, improving scaling and concistency with the rest of the page

--- a/css/styles_faq.css
+++ b/css/styles_faq.css
@@ -13,12 +13,12 @@
     flex-wrap: wrap;
     flex-direction: column;
     gap: 1.25rem;
-    width: 60vw;
+    width: 100%;
 }
 
 .faq_leesmeer { /*Flexbox used for aligning the "Lees Meer" button*/
     display: flex;
-    width: 60vw;
+    width: 100%;
     justify-content: flex-end;
     font-size: large;
     margin-bottom: 1rem;
