--- a/css/circle_dots.css
+++ b/css/circle_dots.css
@@ -14,6 +14,7 @@
     padding: 0 5rem; /* Add padding to the left and right */
     font-size: 2.5rem;
     padding-bottom: 1rem; /* Add padding at the bottom */
+    margin-top: 5rem;
 }
 
 .cirle_dots_title_content p {
@@ -38,7 +39,8 @@
 }
 
 .circle_dots_information_boxes {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     width: 100%;
 }
 
@@ -48,7 +50,6 @@
     box-shadow: 0 1.5px 9px 0 rgba(0, 0, 0, 0.2); /* Apply box shadow */
     min-height: 400px;
     margin: 0 1.5rem; /* Add margin to the left and right */
-    width: 100%;
 }
 
 .circle_dots_information_box img {
@@ -119,4 +120,62 @@
     color: black; /* Set text color to black */
     font-size: 2rem;
     font-family: Calibre-Bold; /* Define font family */
+}
+@media screen and (max-width: 1660px) {
+    .circle_dots_information_boxes {
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    }
+    .circle_dots_information_box {
+        margin-bottom: 1rem;
+    }
+}
+@media screen and (max-width: 1280px) {
+    .circle_dots_information_boxes {
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media screen and (max-width: 1024px) {
+    .circle_dots_information_boxes {
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media screen and (max-width: 768px) {
+    .circle_dots_information_boxes {
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    }
+    .circle_dots_information_box {
+        width: 1fr;
+    }
+}
+@media screen and (max-width: 640px) {
+    .circle_dots_information_boxes {
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr;
+    }
+    .circle_dots_information_box {
+        margin: 1rem 0;
+    }
+    .circle_dots_information_box p {
+        font-size: 1.2rem;
+    }
+    .circle_dots_information_box h3 {
+        font-size: 1.2rem;
+    }
+    .circle_dots_pricing_boxes {
+        flex-direction: column;
+        align-items: center;
+    }
+    .circle_dots_pricing_box {
+        margin: 1rem 0;
+    }
+    .contact-form {
+        padding: 0;
+    }
+    .cirle_dots_title_content p {
+        padding: 0;
+    }
 }
