--- a/css/circle_workspace.css
+++ b/css/circle_workspace.css
@@ -14,12 +14,12 @@
     padding: 0 5rem; /* Add padding to the left and right */
     font-size: 2.5rem;
     padding-bottom: 1rem; /* Add padding at the bottom */
+    margin-top: 5rem;
 }
 
 .cirle_workspace_title_content p {
     text-align: center;
     text-transform: none; /* Ensure text capitalization is as entered */
-    padding: 0 5rem; /* Add padding to the left and right */
     font-size: 1.3rem;
 }
 
@@ -38,7 +38,8 @@
 }
 
 .circle_workspace_information_boxes {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     width: 100%;
 }
 
@@ -46,13 +47,17 @@
     background-color: white;
     border-radius: 18px;
     box-shadow: 0 1.5px 9px 0 rgba(0, 0, 0, 0.2); /* Apply box shadow */
-    min-height: 400px;
-    margin: 0 1.5rem; /* Add margin to the left and right */
-    width: 100%;
+    margin: 0 1rem;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
 }
 
 .circle_workspace_information_box img {
-    margin-top: 15px; /* Add margin to the top of the image */
+    height: 36px;
+    width: 36px;
+    margin-top: 2rem;
 }
 
 .circle_workspace_information_box h3 {
@@ -61,16 +66,17 @@
     margin: .5rem 0 1rem 0; /* Define margins */
     color: black; /* Set text color to black */
     font-size: 1.5rem;
-}
-
-.circle_workspace_information_box p {
-    text-transform: none; /* Ensure text capitalization is as entered */
-    font-size: 1.3rem;
+    width: 100%;
 }
 
 /* Apply the same padding to various elements within the box */
-.circle_workspace_information_box img, .circle_workspace_information_box h3, .circle_workspace_information_box p {
+.circle_workspace_information_box h3, .circle_workspace_information_box p {
     padding: 0 10%;
+}
+.circle_workspace_information_box p {
+    text-transform: none; /* Ensure text capitalization is as entered */
+    font-size: 1.3rem;
+    margin-bottom: 2rem;
 }
 
 .circle_workspace_pricing_title {
@@ -121,4 +127,49 @@
     color: black; /* Set text color to black */
     font-size: 2rem;
     font-family: Calibre-Bold; /* Define font family */
+}
+
+@media screen and (max-width: 1660px) {
+    .circle_workspace_information_boxes {
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr;
+    }
+    .circle_workspace_information_box {
+        margin: 1rem;
+    }
+}
+@media screen and (max-width: 1280px) {
+
+}
+@media screen and (max-width: 1024px) {
+    .circle_workspace_pricing_box {
+        margin: 0 1rem;
+    }
+}
+@media screen and (max-width: 768px) {
+
+}
+@media screen and (max-width: 640px) {
+    .cirle_workspace_title_content p {
+        padding: 0;
+    }
+    .cirle_workspace_title_content h1 {
+        padding: 0;
+        margin-top: 5rem;
+        padding-bottom: 1rem;
+    }
+    .circle_workspace_information_boxes {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+    .circle_workspace_information_box { 
+        margin: 1rem 0;
+    }
+    .circle_workspace_pricing_boxes {
+        flex-direction: column;
+        align-items: center;
+    }
+    .circle_workspace_pricing_box {
+        margin: 1rem 0;
+    }
 }
