--- a/css/line.css
+++ b/css/line.css
@@ -1,5 +1,32 @@
 .line {
     display: flex;
     justify-content: center;
-    margin: 3rem 0;
+    margin: 3rem 10rem;
+    height: 8px;
+    background-color: #C7EAF8;
+}
+@media screen and (max-width: 1660px) {
+    .line {
+        margin: 3rem 8rem;
+    }
+}
+@media screen and (max-width: 1280px) {
+    .line {
+        margin: 3rem 7rem;
+    }
+}
+@media screen and (max-width: 1024px) {
+    .line {
+        margin: 3rem 5rem;
+    }
+}
+@media screen and (max-width: 768px) {
+    .line {
+        margin: 3rem 4rem;
+    }
+}
+@media screen and (max-width: 640px) {
+    .line {
+        margin: 3rem 3rem;
+    }
 }
