Made the text for users a bit more bold in the Circle_workspace/dots.php/css, also some spacing between money and users

--- a/css/circle_workspace.css
+++ b/css/circle_workspace.css
@@ -121,6 +121,7 @@
 
 .circle_workspace_pricing_box_1 p {
     font-family: Calibre-Medium;
+    font-weight: 700;
 }
 
 .circle_workspace_pricing_box_2 {
