--- a/css/line_small.css
+++ b/css/line_small.css
@@ -1,32 +1,25 @@
-.line {
+.line_small {
     display: flex;
     justify-content: center;
-    margin: 3rem 10rem;
+    margin-bottom: 1.2rem ;
+    margin-right: 6rem;
     height: 8px;
     background-color: var(--normal-blue);
 }
-@media screen and (max-width: 1660px) {
-    .line {
-        margin: 3rem 8rem;
-    }
-}
-@media screen and (max-width: 1280px) {
-    .line {
-        margin: 3rem 7rem;
+
+@media screen and (max-width: 1279px) {
+    .line_small {
+        margin-right: 25rem;
     }
 }
 @media screen and (max-width: 1024px) {
-    .line {
-        margin: 3rem 5rem;
+    .line_small {
+        margin-right: 15rem;
     }
 }
+
 @media screen and (max-width: 768px) {
-    .line {
-        margin: 3rem 4rem;
-    }
-}
-@media screen and (max-width: 640px) {
-    .line {
-        margin: 3rem 3rem;
+    .line_small {
+        margin-right: 10rem;
     }
 }
