Removed double underscores in darkmodebutton.css, Added darkmode.js which is the functionality of the button, Added darkmode_button id to checkbox in darkmodebutton.php for js, changed footer colors to vars

--- a/css/darkmodebutton.css
+++ b/css/darkmodebutton.css
@@ -30,7 +30,7 @@
     font-size: var(--toggle-size);
   }
   
-  .theme-switch__container {
+  .theme-switch_container {
     width: var(--container-width);
     height: var(--container-height);
     background-color: var(--container-light-bg);
@@ -45,7 +45,7 @@
     position: relative;
   }
   
-  .theme-switch__container::before {
+  .theme-switch_container::before {
     content: "";
     position: absolute;
     z-index: 1;
@@ -55,11 +55,11 @@
     border-radius: var(--container-radius)
   }
   
-  .theme-switch__checkbox {
+  .theme-switch_checkbox {
     display: none;
   }
   
-  .theme-switch__circle-container {
+  .theme-switch_circle-container {
     width: var(--circle-container-diameter);
     height: var(--circle-container-diameter);
     background-color: rgba(255, 255, 255, 0.1);
@@ -78,7 +78,7 @@
     pointer-events: none;
   }
   
-  .theme-switch__sun-moon-container {
+  .theme-switch_sun-moon-container {
     pointer-events: auto;
     position: relative;
     z-index: 2;
@@ -97,7 +97,7 @@
     transition: var(--transition);
   }
   
-  .theme-switch__moon {
+  .theme-switch_moon {
     -webkit-transform: translateX(100%);
     -ms-transform: translateX(100%);
     transform: translateX(100%);
@@ -113,7 +113,7 @@
     position: relative;
   }
   
-  .theme-switch__spot {
+  .theme-switch_spot {
     position: absolute;
     top: 0.75em;
     left: 0.312em;
@@ -125,21 +125,21 @@
     box-shadow: 0em 0.0312em 0.062em rgba(0, 0, 0, 0.25) inset;
   }
   
-  .theme-switch__spot:nth-of-type(2) {
+  .theme-switch_spot:nth-of-type(2) {
     width: 0.375em;
     height: 0.375em;
     top: 0.937em;
     left: 1.375em;
   }
   
-  .theme-switch__spot:nth-last-of-type(3) {
+  .theme-switch_spot:nth-last-of-type(3) {
     width: 0.25em;
     height: 0.25em;
     top: 0.312em;
     left: 0.812em;
   }
   
-  .theme-switch__clouds {
+  .theme-switch_clouds {
     width: 1.25em;
     height: 1.25em;
     background-color: var(--clouds-color);
@@ -154,7 +154,7 @@
     transition: 0.5s cubic-bezier(0, -0.02, 0.4, 1.25);
   }
   
-  .theme-switch__stars-container {
+  .theme-switch_stars-container {
     position: absolute;
     color: var(--stars-color);
     top: -100%;
@@ -168,33 +168,33 @@
   
   /* actions */
   
-  .theme-switch__checkbox:checked + .theme-switch__container {
+  .theme-switch_checkbox:checked + .theme-switch_container {
     background-color: var(--container-night-bg);
   }
   
-  .theme-switch__checkbox:checked + .theme-switch__container .theme-switch__circle-container {
+  .theme-switch_checkbox:checked + .theme-switch_container .theme-switch_circle-container {
     left: calc(100% - var(--circle-container-offset) - var(--circle-container-diameter));
   }
   
-  .theme-switch__checkbox:checked + .theme-switch__container .theme-switch__circle-container:hover {
+  .theme-switch_checkbox:checked + .theme-switch_container .theme-switch_circle-container:hover {
     left: calc(100% - var(--circle-container-offset) - var(--circle-container-diameter) - 0.187em)
   }
   
-  .theme-switch__circle-container:hover {
+  .theme-switch_circle-container:hover {
     left: calc(var(--circle-container-offset) + 0.187em);
   }
   
-  .theme-switch__checkbox:checked + .theme-switch__container .theme-switch__moon {
+  .theme-switch_checkbox:checked + .theme-switch_container .theme-switch_moon {
     -webkit-transform: translate(0);
     -ms-transform: translate(0);
     transform: translate(0);
   }
   
-  .theme-switch__checkbox:checked + .theme-switch__container .theme-switch__clouds {
+  .theme-switch_checkbox:checked + .theme-switch_container .theme-switch_clouds {
     bottom: -4.062em;
   }
   
-  .theme-switch__checkbox:checked + .theme-switch__container .theme-switch__stars-container {
+  .theme-switch_checkbox:checked + .theme-switch_container .theme-switch_stars-container {
     top: 50%;
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
