--- a/css/circle_workspace.css
+++ b/css/circle_workspace.css
@@ -47,7 +47,7 @@
 }
 
 .circle_workspace_information_box {
-    background-color: white;
+    background-color: var(--white);
     border-radius: 18px;
     box-shadow: 0 1.5px 9px 0 rgba(0, 0, 0, 0.2);
     display: flex;
@@ -66,7 +66,7 @@
     font-family: Calibre-Regular, sans-serif;
     padding-top: 1rem;
     margin: .5rem 0 1rem 0;
-    color: black;
+    color: var(--black);
     font-size: 1.5rem;
     width: 100%;
 }
@@ -103,7 +103,7 @@
 }
 
 .circle_workspace_pricing_box {
-    background-color: white;
+    background-color: var(--white);
     box-shadow: 0 1.5px 9px 0 rgba(0, 0, 0, 0.2);
     border-radius: 18px;
     width: 100%;
@@ -129,7 +129,7 @@
 }
 
 .circle_workspace_pricing_box_2 span {
-    color: black;
+    color: var(--black);
     font-size: 2rem;
     font-family: Calibre-Bold;
 }
