--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 header {
     height: 100vh;
     width: 100%;
-    background-image: url("../img/headerbackgroundcircles.svg"), linear-gradient(var(--dark-blue), var(--light-background), var(--light-background));
+    background-image: var(--header-background);
     background-size: cover;
 }
 
@@ -51,8 +51,8 @@ header {
 
 .banner_text a {
     font-family: Calibre-Bold;
-    font-size: 1.125rem;
-    color: var(--white);
+    font-size: 1.3rem;
+    color: white;
 }
 
 @media screen and (max-width: 1279px){
