--- a/css/navbar.css
+++ b/css/navbar.css
@@ -15,7 +15,7 @@ nav {
 nav a {
     font-family: Calibre-Bold;
     font-size: 1.125rem;
-    color: var(--white);
+    color: white;
     transition: color 0.4s ease-in-out;
 }
 
