--- a/css/services.css
+++ b/css/services.css
@@ -34,8 +34,7 @@
 /* Container for service workspace */
 .container_services_workspace {
     border-radius: 1.35rem;
-    border: 0.056rem solid var(--neutral-300, #EFF0F6);
-    background: var(--neutral-100, #FFF);
+    background: var(--white);
     box-shadow: 0rem 0.094rem 0.563rem 0rem rgba(20, 20, 43, 0.25);
     width: 22.556rem;
     height: 37.125rem;
@@ -54,7 +53,7 @@
     display: flex;
     align-items: center;
     gap: 0.7rem;
-    color: #799DAB;
+    color: var(--dark-blue);
     font-size: 1.35rem;
     font-family: calibre-Bold,sans-serif;
 }
@@ -66,7 +65,7 @@
 
 .circle_text_1 {
     padding-top: 0.7rem;
-    color: #3C3C43; 
+    color: var(--text-color); 
     font-size: 1.013rem;
     text-align: start;
     font-family: calibre-Medium,sans-serif;
@@ -77,7 +76,7 @@
     padding-bottom: 1rem;
     font-family: calibre-Medium,sans-serif;
     text-align: start;
-    color: #3C3C43;
+    color: var(--text-color);
     font-style: normal;
     line-height: 1.125rem; /* 111.111% */ 
 }
@@ -85,17 +84,18 @@
     font-family: Calibre-Bold,sans-serif;
     font-size: 1.013rem;
     display: flex;
+    color: var(--black);
 }
 
 .circle_text_4 {
     font-weight: 700;
-    color: #3C3C43;
+    color: var(--text-color);
     font-size: 1rem;
     font-family: Calibre-Medium,sans-serif;
 }
 
 .money_text{
-    color: #3C3C43;
+    color: var(--text-color);
     font-size: 2.5rem;
     font-weight: 700;
     line-height: 3.713rem; 
@@ -116,7 +116,7 @@
 .check_circle_text{
     display: flex;
     gap: 0.875rem;
-    color: #3C3C43;
+    color: var(--text-color);
     font-family: Calibre-Regular,sans-serif;
     font-size: 1.013rem;
     align-items: self-end;
@@ -133,7 +133,7 @@
     height: 4.05rem;
     font-family: Calibre-Bold,sans-serif;
     font-size: 1.013rem;
-    color: #EFF0F6;
+    color: white;
     margin: 1rem 0;
 }
 
@@ -146,8 +146,7 @@
 /* Container for the service D.O.T.S.*/
 .container_services_diamond {
     border-radius: 1.35rem;
-    border: 0.056rem solid var(--neutral-300, #EFF0F6);
-    background: var(--neutral-100, #FFF);
+    background: var(--white);
     box-shadow: 0rem 0.094rem 0.563rem 0rem rgba(20, 20, 43, 0.25);
     width: 22.556rem;
     height: 37.125rem;
