--- a/css/values.css
+++ b/css/values.css
@@ -25,7 +25,7 @@
 .values_big_box {
     width: 100%;
     height: 30rem;
-    background-color: white;
+    background-color: var(--white);
     box-shadow: 0 1.5px 9px 0 rgba(0, 0, 0, 0.2);
     border-radius: 20px;
     display: flex;
@@ -78,7 +78,7 @@
     width: 360px;
     min-width: 220px;
     height: 110px;
-    background-color: white;
+    background-color: var(--white);
     box-shadow: 0 1.5px 9px 0 rgba(0, 0, 0, 0.2);
     border-radius: 20px;
     display: flex;
