--- a/css/styles_faq.css
+++ b/css/styles_faq.css
@@ -11,13 +11,11 @@
     align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
-    gap: 1.25rem;
-    width: 100%;
+    gap: 30px;
 }
 
 .faq_leesmeer { /*Flexbox used for aligning the "Lees Meer" button*/
     display: flex;
-    width: 100%;
     justify-content: flex-end;
     font-size: large;
     margin-bottom: 1rem;
@@ -119,3 +117,21 @@
         transform: translate3d(0.2rem, 0, 0);
     }
     }
+
+@media screen and (min-width: 720px) {
+    .faq_inner_flex {
+        width: 75%;
+    }
+    .faq_leesmeer{
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 719px) {
+    .faq_inner_flex {
+        width: 100%;
+    }
+    .faq_leesmeer{
+        width: 100%;
+    }
+}
