--- a/css/contact.css
+++ b/css/contact.css
@@ -1,14 +1,14 @@
 @import url(styles.css);
 
 @media (max-width: 1280px) {
-    .contact-form{
+    .contact_form{
         background-color: transparent !important;
         height: 45rem !important
     }
-    .contact-left {
+    .contact_left {
         display: none !important
     }
-    .contact-right {
+    .contact_right {
         background-color: var(--white) !important
     }
 }
