Changed the animation of the faq to be a little more subtle in style_faq.css | Added succes.php and made it functional by getting the post request from contact | added filter input to succes.php | Made responsive changes for carousel | Added mobile arrows for carousel

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
 @import url(circle_workspace.css);
 @import url(darkmodebutton.css);
 @import url(line_small.css);
+@import url(succes.css);
 
 @font-face {
     font-family: Calibre-Medium;
