Reviews was responsive in inspect but not on irl phone, added a padding in the media qeury that fixed the problem | Removed the padding in contact.css so it is responsive on phone

--- a/css/contact.css
+++ b/css/contact.css
@@ -186,3 +186,9 @@ align-items: center; /* Center vertically within the container */
 .title_section {
     text-align: center;
 }
+
+@media only screen and (max-width: 680px) and (min-width: 0px) {
+    .contact_form {
+        padding: 0rem;
+    }
+}
